+
image:https://raw.githubusercontent.com/NetAppDocs/cloud-manager-setup-admin/main/media/screenshot-search-docs.png["Una schermata della ricerca BlueXP disponibile nella parte superiore della console."]

* Il connettore è ora supportato nelle seguenti aree AWS:
+
** Hyderabad (ap-sud-2)
** Melbourne (ap-sud-est-4)
** Spagna (ue-Sud-2)
** Emirati Arabi Uniti (me-Central-1)
** Zurigo (eu-Central-2)


* Il connettore è ora supportato nelle seguenti aree di Azure:
+
** Brasile Sud
** Francia Sud
** Jio India Central
** Jio India ovest
** Polonia centrale
** Qatar Central


* Il connettore è ora supportato nelle seguenti aree di Google Cloud:
+
** Columbus (US-east5)
** Dallas (US-South1)


+
https://cloud.netapp.com/cloud-volumes-global-regions["Visualizza l'elenco completo delle regioni supportate"^]





== 7 maggio 2023



=== Connettore 3.9.29

* Ubuntu 22.04 è il nuovo sistema operativo per il connettore quando si implementa un connettore da BlueXP o dal mercato del cloud provider.
+
È inoltre possibile installare manualmente il connettore sul proprio host Linux su cui è in esecuzione Ubuntu 22.04.

* Red Hat Enterprise Linux 8.6 e 8.7 non sono più supportati con le nuove implementazioni di connettori.
+
Queste versioni non sono supportate con le nuove implementazioni perché Red Hat non supporta più Docker, necessario per il connettore. Se si dispone di un connettore esistente in esecuzione su RHEL 8.6 o 8.7, NetApp continuerà a supportare la configurazione.

+
Red Hat 7.6, 7.7, 7.8 e 7.9 sono ancora supportati con connettori nuovi ed esistenti.

* Il connettore è ora supportato nell'area Qatar di Google Cloud.
* Il connettore è supportato anche nella regione Sweden Central di Microsoft Azure.
+
https://cloud.netapp.com/cloud-volumes-global-regions["Visualizza l'elenco completo delle regioni supportate"^]

* Questa versione del connettore include i miglioramenti di Cloud Volumes ONTAP.
+